_deploy/position-postgres-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: position-database-postgres
  namespace: baseball
  labels:
    app: position-database-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: position-database-postgres
  template:
    metadata:
      labels:
        app: position-database-postgres
    spec:
      containers:
        - name: position-database-postgres
          image: postgres:14.1-alpine
          volumeMounts:
            - name: position-database-data-volume
              mountPath: "/var/lib/postgresql/data"
          ports:
            - name: db
              containerPort: 5432
      volumes:
        - name: position-database-data-volume
          persistentVolumeClaim:
            claimName: position-database-data-claim
