_deploy/position-database-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: position-database
  namespace: baseball
spec:
  selector:
    app: position-database
  ports:
    - port: 5432
      targetPort: 5432
      name: position-database
