_deploy/position-postgres-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: position-database-postgres
  namespace: baseball
spec:
  selector:
    app: position-database-postgres
  ports:
  - port: 5432
    targetPort: 5432
    name: position-database-postgres
