_deploy/position-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: position
  namespace: baseball
spec:
  selector:
    app: position
  ports:
    - port: 8080
      targetPort: 8080
      name: position
